2013-04-21  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Fixes and improvements related to item relocation.
	(todos-category-completions): On ensuring proper category display,
	if done items in category are visible, keep them visible.
	(todos-set-item-priority): Keep top of category in view while
	setting priority.
	(todos-move-item): Restore prevention of moving within the same
	category.  Move done items to top, not end, of done items section.
	When user quits before setting priority, make sure to return to
	starting file.
	(todos-item-undo): Partly reimplement along lines of
	todos-move-item, adding highlighting of single item as undo
	target, setting priority of multiple undone items, improving
	handling of quitting before setting priority.
	(todos-unarchive-items): Restore items to top, not end, of
	category's done section.

2013-04-19  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Extend and improve item filtering and handling of
	saved files of filtered items.
	(todos-show-first): Add choices for diary and regexp items.
	(todos-absolute-file-name): Handle file names for diary and regexp
	items.
	(todos-filter-items): New function abstracted from item filtering
	commands, with handling of saved files of diary and regexp items.
	(todos-filter-items-1): Rename from todos-filter-items.
	(todos-filtered-buffer-name): Remove, since functionality is now
	incorporated into new function todos-filter-items.
	(todos-filtered-items-buffer, todos-top-priorities-buffer)
	(todos-diary-items-buffer, todos-regexp-items-buffer):
	Make defconsts instead of defcustoms.
	(todos-find-item): Restrict calculation and comparison of
	priorities to top priority items, in order to handle diary and
	regexp items.
	(todos-check-filtered-items-file): Rename from
	todos-check-top-priorities and adjust message and callers.
	(todos-filter-items-filename): Rename from
	todos-top-priorities-filename, adjusting caller and extending to